--- a/Section_3_Configuration/Dockerfile
+++ b/Section_3_Configuration/Dockerfile
@@ -9,3 +9,7 @@ RUN pip install flask-mysql
 COPY . /opt/source-code
 
 ENTRYPOINT FLASK_APP=/opt/source-code/app.py flask run
+-------
+
+# docker build Dockerfile -t islamahmed94/my-custom-app
+# docker push islamahmed94/my-custom-app
