Update and rename pod-with-labels.yml to pod-with-labels-annotations.yml

--- a/Section_6_Pod_Design/pod-with-labels-annotations.yml
+++ b/Section_6_Pod_Design/pod-with-labels-annotations.yml
@@ -5,6 +5,8 @@ metadata:
   labels:
     app: App1
     function: Front-end
+  annotations:
+      buildversion: 1.34
 spec:
   containers:
   - name: simple-webapp-color
