--- a/Section_6_Pod_Design/pod-with-labels-annotations.yml
+++ b/Section_6_Pod_Design/pod-with-labels-annotations.yml
@@ -6,7 +6,7 @@ metadata:
     app: App1
     function: Front-end
   annotations:
-      buildversion: 1.34
+      buildversion: "1.34"
 spec:
   containers:
   - name: simple-webapp-color
