--- a/Section_7_Services_&_Networking/network-policy-definition.yml
+++ b/Section_7_Services_&_Networking/network-policy-definition.yml
@@ -13,6 +13,9 @@ spec:
     - podSelector:
         matchLabels:
           name: api-pod
+      namespaceSelector:
+        matchLabels:
+          name: prod
     ports:
     - protocol: TCP
       port: 3306
