--- a/Section_9_Security/kubeconfig.yml
+++ b/Section_9_Security/kubeconfig.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Config
 
+current-context: my-kube-admin@my-kube-playground    #set default context using 'current-context: ' key
+
 clusters:
 - name: my-kube-playground
   cluster:
